Доработанный вариант итоговой

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 			<h2 class="title big-title">Сейчас в тренде</h2>
 			<div class="trends-list">
 				<article class="trends-card trends-garden">
-					<a class="trends-item" href="#0"></a>
 					<div class="trends-content">
 						<ul class="cathegory">
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Lifestyle</a></li>
@@ -45,32 +44,29 @@
 					</div>
 				</article>
 				<article class="trends-card trends-cheese">
-					<a class="trends-item" href="#0"></a>
 					<div class="trends-content">
 						<ul class="cathegory">
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Food</a></li>
 						</ul>
-						<h3  class="item-title trend-title"><a href="#0">Сыры на красивых картинках из интернета: какие они на вкус?</a></h3>
+						<h3 class="item-title trend-title"><a href="#0">Сыры на красивых картинках из интернета: какие они на вкус?</a></h3>
 					</div>
 				</article>
 				<article class="trends-card trends-hike">
-					<a class="trends-item" href="#0"></a>
 					<div class="trends-content">
 						<ul class="cathegory">
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Lifestyle</a></li>
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Travel</a></li>
 						</ul>
-						<h3  class="item-title trend-title"><a href="#0">Собираемся в первый поход в горы</a></h3>
+						<h3 class="item-title trend-title"><a href="#0">Собираемся в первый поход в горы</a></h3>
 					</div>
 				</article>
 				<article class="trends-card trends-lemons">
-					<a class="trends-item" href="#0"></a>
 					<div class="trends-content">
 						<ul class="cathegory">
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Food</a></li>
 							<li class="cathegory-item"><a class="cathegory-link" href="#0">Health</a></li>
 						</ul>
-						<h3  class="item-title trend-title"><a href="#0">Сейчас в тренде: сколько витамина С в лимонах?</a></h3>
+						<h3 class="item-title trend-title"><a href="#0">Сейчас в тренде: сколько витамина С в лимонах?</a></h3>
 					</div>
 				</article>
 			</div>
@@ -376,7 +372,7 @@
 	<div class="popup visually-hidden" id="popup">
 		<div class="popup-container">
 			<div class="popup-content">
-				<button class="popup-close" type="button"></button>
+				<button class="popup-close" type="button"><span class="visually-hidden">Кнопка закрыть</span></button>
 				<h2 class="title big-title">Ваш фидбек</h2>
 				<form class="popup-form" action="#">
 					<div class="field-group">
